--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ img{
         width: 100%;
     }
 }
+
+@media only screen and (min-width: 901px) {
+    .ending {
+      font-size: 30px;
+    }
+}
